Fix an issue that caused flipped creatures on mobile to appear upside-down

--- a/features/2019/space-invaders/src/partials/_creatures.scss
+++ b/features/2019/space-invaders/src/partials/_creatures.scss
@@ -70,7 +70,7 @@
 	}
 	
 	&.flipped {
-		transform: scale(-.8);
+		transform: scale(-.8,.8);
 	}
 	
 	&.flipped.destroyed {
